<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:elevation="0dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/logoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/app_name"
                android:textColor="@color/white"
                android:fontFamily="@font/kanmed"
                android:layout_marginTop="-20dp"
                android:textSize="55sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImage"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/inputEmailLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/rounded_background"

                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"

                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoText" />

            <EditText
                android:id="@+id/inputPasswordLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"

                android:drawableStart="@drawable/security_icon"
                android:drawablePadding="10dp"
                android:ems="10"

                android:hint="@string/password"
                android:inputType="textPassword"

                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputEmailLogin"
                app:layout_constraintStart_toStartOf="@+id/inputEmailLogin"
                app:layout_constraintTop_toBottomOf="@+id/inputEmailLogin"
                android:autofillHints="" />

            <TextView
                android:id="@+id/forgotPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="16sp"

                app:layout_constraintEnd_toEndOf="@+id/inputPasswordLogin"
                app:layout_constraintTop_toBottomOf="@+id/inputPasswordLogin" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"

                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/accent_purple"
                android:text="@string/login"
                style="@style/CustomButton"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/forgotPasswordLogin"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/inputPasswordLogin"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordLogin" />

            <TextView
                android:id="@+id/createNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/orLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/OrLine"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <View
                android:layout_width="136dp"
                android:layout_height="2dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/orLine"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/orLine"
                app:layout_constraintTop_toTopOf="@+id/orLine"
                app:layout_constraintVertical_bias="0.52" />

            <View
                android:id="@+id/view2"
                android:layout_width="136dp"
                android:layout_height="2dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/orLine"
                app:layout_constraintEnd_toStartOf="@+id/orLine"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:layout_constraintTop_toTopOf="@+id/orLine"
                app:layout_constraintVertical_bias="0.44" />

            <ImageView
                android:id="@+id/btnGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orLine"
                app:srcCompat="@drawable/google" />

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>