<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_screen"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/logoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanmed"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="55sp"
                android:layout_marginTop="-40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImage"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputUserType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/logoText"
                app:layout_constraintStart_toStartOf="@+id/logoText"
                app:layout_constraintTop_toBottomOf="@+id/logoText"
                style="@style/CustomDropdownStyle">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteUserType"
                    android:layout_width="match_parent"
                    android:background="@drawable/rounded_background"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:hint="@string/select_user_type"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/input_manager_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"

                android:ems="10"
                android:hint="@string/manager_email"
                android:inputType="textEmailAddress"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputUserType"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/inputUserType"
                app:layout_constraintTop_toBottomOf="@+id/inputUserType"
                android:paddingLeft="20dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"

                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_manager_email" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/security_icon"
                android:drawablePadding="10dp"

                android:ems="10"
                android:hint="@string/password"

                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                android:autofillHints="" />


            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                android:autofillHints=""
                android:background="@drawable/rounded_background"

                android:drawableStart="@drawable/security_icon"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <EditText
                android:id="@+id/input_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                android:autofillHints=""
                android:background="@drawable/rounded_background"

                android:drawableStart="@drawable/name_icon"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

            <EditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                android:autofillHints=""
                android:background="@drawable/rounded_background"

                android:drawableStart="@drawable/phone_icon"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/input_full_name"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/input_full_name"
                app:layout_constraintTop_toBottomOf="@+id/input_full_name" />

            <EditText
                android:id="@+id/input_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                android:autofillHints=""
                android:background="@drawable/rounded_background"

                android:drawableStart="@drawable/id_icon"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/id"
                android:inputType="phone"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputPhoneNumber"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/inputPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber" />

            <EditText
                android:id="@+id/inputBusinessCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                android:autofillHints=""
                android:background="@drawable/rounded_background"

                android:drawableStart="@drawable/business_icon"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/business_code"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/input_id"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/input_id"
                app:layout_constraintTop_toBottomOf="@+id/input_id" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"
                android:background="@drawable/btn_bg"

                android:text="@string/register"
                android:textColor="@color/white"

                style="@style/CustomButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputBusinessCode"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>
            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="14dp"
                android:src="@drawable/arrow_back_icon"
                />

            <TextView
                android:id="@+id/alreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/alreadyHaveAnAccount"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegister"
                app:layout_constraintVertical_bias="1.0" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>